Refactorize the denoising package: split it in transform, filter and ui packages.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ xps
 *.pdf
 *.json
 *.fits
+archives_ngc3576-out.png
+archives_ngc3576.png
 
 # PYTHON ######################################################################
 
