Add Numba in the dependencies and update the version number.

--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - sphinx-automodapi
   - sphinxcontrib
   - sphinxcontrib-websupport
+  - numba
   - numpy
   - scipy
   - scikit-image
