Update the version ID.

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,9 @@ ENV/
 
 # COMMON ######################################################################
 
+# Visual Studio Code files
+.vscode/
+
 # Vim swap files
 *.swp
 
